# android-tether

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: arp.rs  config.rs  daemon.rs  dhcp.rs  dns_proxy.rs  dnscrypt.rs  error.rs  frame.rs  ipc.rs  main.rs  net_types.rs  proto_driver.rs  proto_rndis.rs  rndis.rs  stats.rs  usb_device.rs  usb_io.rs  utun.rs
