[package]
name = "android-tether"
version = "2.0.0"
edition = "2021"
description = "Android USB Tethering for macOS — Rust rewrite (faster, safer, smarter)"

[[bin]]
name = "android-tether"
path = "src/main.rs"

[dependencies]
nusb = "0.2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
dirs-next = "2"
ctrlc = "3"
ureq = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
